Bug 205981 - Pericom USB controller doesn't respond to USB hotplug once it's runtime suspended
Summary: Pericom USB controller doesn't respond to USB hotplug once it's runtime suspe...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: PCI (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_pci@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-27 08:58 UTC by Kai-Heng Feng
Modified: 2020-06-02 09:33 UTC (History)
0 users

See Also:
Kernel Version: mainline
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (72.20 KB, text/plain)
2019-12-27 08:58 UTC, Kai-Heng Feng
Details
lspci -t (655 bytes, text/plain)
2019-12-27 08:59 UTC, Kai-Heng Feng
Details
lspci -vvnn (53.90 KB, text/plain)
2019-12-27 08:59 UTC, Kai-Heng Feng
Details

Description Kai-Heng Feng 2019-12-27 08:58:53 UTC
Created attachment 286475 [details]
dmesg
Comment 1 Kai-Heng Feng 2019-12-27 08:59:18 UTC
Created attachment 286477 [details]
lspci -t
Comment 2 Kai-Heng Feng 2019-12-27 08:59:45 UTC
Created attachment 286479 [details]
lspci -vvnn
Comment 3 Kai-Heng Feng 2020-06-02 09:33:34 UTC
commit 68f5fc4ea9ddf9f77720d568144219c4e6452cde
Author: Kai-Heng Feng <kai.heng.feng@canonical.com>
Date:   Fri May 8 14:53:41 2020 +0800

    PCI: Avoid Pericom USB controller OHCI/EHCI PME# defect

Note You need to log in before you can comment on or make changes to this bug.